--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "Carbon.Core/Carbon.Components/Carbon.Modules"]
 	path = Carbon.Core/Carbon.Components/Carbon.Modules
 	url = https://github.com/CarbonCommunity/Carbon.Modules.git
+[submodule "Carbon.Core/Carbon.Components/Carbon.Preloader"]
+	path = Carbon.Core/Carbon.Components/Carbon.Preloader
+	url = https://github.com/CarbonCommunity/Carbon.Preloader.git
