--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "Carbon.Core/Carbon.Components/Carbon.Bootstrap"]
 	path = Carbon.Core/Carbon.Components/Carbon.Bootstrap
 	url = https://github.com/CarbonCommunity/Carbon.Bootstrap.git
+[submodule "Carbon.Core/Carbon.Components/Carbon.Common"]
+	path = Carbon.Core/Carbon.Components/Carbon.Common
+	url = https://github.com/CarbonCommunity/Carbon.Common.git
