--- a/.gitmodules
+++ b/.gitmodules
@@ -1,33 +1,44 @@
 [submodule "Tools/DepotDownloader"]
 	path = Tools/DepotDownloader
 	url = https://github.com/SteamRE/DepotDownloader.git
+	branch = .
 [submodule "Carbon.Core/Carbon.Components/Carbon.Compat"]
 	path = Carbon.Core/Carbon.Components/Carbon.Compat
 	url = https://github.com/CarbonCommunity/Carbon.Compat.git
+	branch = .
 [submodule "Carbon.Core/Carbon.Components/Carbon.Modules"]
 	path = Carbon.Core/Carbon.Components/Carbon.Modules
 	url = https://github.com/CarbonCommunity/Carbon.Modules.git
+	branch = .
 [submodule "Carbon.Core/Carbon.Components/Carbon.Preloader"]
 	path = Carbon.Core/Carbon.Components/Carbon.Preloader
 	url = https://github.com/CarbonCommunity/Carbon.Preloader.git
+	branch = .
 [submodule "Carbon.Core/Carbon.Components/Carbon.Bootstrap"]
 	path = Carbon.Core/Carbon.Components/Carbon.Bootstrap
 	url = https://github.com/CarbonCommunity/Carbon.Bootstrap.git
+	branch = .
 [submodule "Carbon.Core/Carbon.Components/Carbon.Common"]
 	path = Carbon.Core/Carbon.Components/Carbon.Common
 	url = https://github.com/CarbonCommunity/Carbon.Common.git
+	branch = .
 [submodule "Carbon.Core/Carbon.Components/Carbon.SDK"]
 	path = Carbon.Core/Carbon.Components/Carbon.SDK
 	url = https://github.com/CarbonCommunity/Carbon.SDK.git
+	branch = .
 [submodule "Carbon.Core/Carbon.Extensions/Carbon.Ext.Discord"]
 	path = Carbon.Core/Carbon.Extensions/Carbon.Ext.Discord
 	url = https://github.com/CarbonCommunity/Carbon.Ext.Discord.git
+	branch = .
 [submodule "Carbon.Core/Carbon.Hooks/Carbon.Hooks.Base"]
 	path = Carbon.Core/Carbon.Hooks/Carbon.Hooks.Base
 	url = https://github.com/CarbonCommunity/Carbon.Hooks.Base.git
+	branch = .
 [submodule "Carbon.Core/Carbon.Hooks/Carbon.Hooks.Oxide"]
 	path = Carbon.Core/Carbon.Hooks/Carbon.Hooks.Oxide
 	url = https://github.com/CarbonCommunity/Carbon.Hooks.Oxide.git
+	branch = .
 [submodule "Carbon.Core/Carbon.Hooks/Carbon.Hooks.Community"]
 	path = Carbon.Core/Carbon.Hooks/Carbon.Hooks.Community
 	url = https://github.com/CarbonCommunity/Carbon.Hooks.Community.git
+	branch = .
