--- a/Carbon.Core/Carbon.Hooks/Carbon.Hooks.Extra/Carbon.Hooks.Extra.csproj
+++ b/Carbon.Core/Carbon.Hooks/Carbon.Hooks.Extra/Carbon.Hooks.Extra.csproj
@@ -3,6 +3,7 @@
 		<Product>Carbon.Hooks.Extra</Product>
 		<OutputType>Library</OutputType>
 		<ProjectGuid>{28195F54-F8A2-49D6-AE91-033D078502AD}</ProjectGuid>
+		<DebugType>none</DebugType>
 	</PropertyGroup>
 
 	<Import Project="$(SolutionDir)\.msbuild\Common.props" />
