--- a/.gitmodules
+++ b/.gitmodules
@@ -22,6 +22,10 @@
 	path = Carbon.Core/Carbon.Components/Carbon.Common
 	url = https://github.com/CarbonCommunity/Carbon.Common.git
 	branch = .
+[submodule "Carbon.Core/Carbon.Components/Carbon.Common.Client"]
+	path = Carbon.Core/Carbon.Components/Carbon.Common.Client
+	url = https://github.com/CarbonCommunity/Carbon.Common.Client.git
+	branch = .
 [submodule "Carbon.Core/Carbon.Components/Carbon.SDK"]
 	path = Carbon.Core/Carbon.Components/Carbon.SDK
 	url = https://github.com/CarbonCommunity/Carbon.SDK.git
