--- a/Carbon.Core/Carbon/Carbon.csproj
+++ b/Carbon.Core/Carbon/Carbon.csproj
@@ -9,6 +9,7 @@
 		<IsPackable>true</IsPackable>
 		<NuspecFile>..\.nuspec</NuspecFile>
 		<NuspecProperties>version=$(PackageVersion)</NuspecProperties>
+		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 	</PropertyGroup>
 
 	<Import Project="$(SolutionDir)\.msbuild\Common.props" />
@@ -19,6 +20,7 @@
 		<PackageReference Include="Lib.Harmony" Version="2.2.2" />
 		<ProjectReference Include="$(SolutionDir)\Carbon.Components\Carbon.Common\Carbon.Common.csproj" Private="false" />
 		<ProjectReference Include="$(SolutionDir)\Carbon.Components\Carbon.Common.Client\Carbon.Common.Client.csproj" />
+		<ProjectReference Include="$(SolutionDir)\Carbon.Components\Carbon.Compiler\Carbon.Compiler.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
