Fixed build tags across all branches

--- a/.github/workflows/rust-staging-build.yml
+++ b/.github/workflows/rust-staging-build.yml
@@ -80,8 +80,8 @@ jobs:
       shell: bash
       run: |
         export VERSION=${{ needs.bootstrap.outputs.version }}
-        ${GITHUB_WORKSPACE}/Tools/Build/linux/build.sh DebugUnix STAGING
-        ${GITHUB_WORKSPACE}/Tools/Build/linux/build.sh MinimalUnix STAGING
+        ${GITHUB_WORKSPACE}/Tools/Build/linux/build.sh DebugUnix STAGING "rustbeta_staging"
+        ${GITHUB_WORKSPACE}/Tools/Build/linux/build.sh MinimalUnix STAGING "rustbeta_staging"
         
     - name: ⬆️ Upload the artifacts
       uses: actions/upload-artifact@v3
@@ -125,8 +125,8 @@ jobs:
       shell: cmd
       run: |
         set VERSION=${{ needs.bootstrap.outputs.version }}
-        call %GITHUB_WORKSPACE%\Tools\Build\win\build.bat Debug STAGING
-        call %GITHUB_WORKSPACE%\Tools\Build\win\build.bat Minimal STAGING
+        call %GITHUB_WORKSPACE%\Tools\Build\win\build.bat Debug STAGING rustbeta_staging
+        call %GITHUB_WORKSPACE%\Tools\Build\win\build.bat Minimal STAGING rustbeta_staging
 
     - name: ⬆️ Upload the artifacts
       uses: actions/upload-artifact@v3
