--- a/.github/workflows/production-build.yml
+++ b/.github/workflows/production-build.yml
@@ -76,8 +76,8 @@ jobs:
       shell: bash
       run: |
         export VERSION=${{ needs.bootstrap.outputs.version }}
-        ${GITHUB_WORKSPACE}/Tools/Build/linux/build.sh ReleaseUnix
-        ${GITHUB_WORKSPACE}/Tools/Build/linux/build.sh MinimalUnix
+        ${GITHUB_WORKSPACE}/Tools/Build/linux/build.sh ReleaseUnix "" "production_build"
+        ${GITHUB_WORKSPACE}/Tools/Build/linux/build.sh MinimalUnix "" "production_build"
         
     - name: ⬆️ Upload the artifacts
       uses: actions/upload-artifact@v3
@@ -116,8 +116,8 @@ jobs:
       shell: cmd
       run: |
         set VERSION=${{ needs.bootstrap.outputs.version }}
-        call %GITHUB_WORKSPACE%\Tools\Build\win\build.bat Release
-        call %GITHUB_WORKSPACE%\Tools\Build\win\build.bat Minimal
+        call %GITHUB_WORKSPACE%\Tools\Build\win\build.bat Release . production_build
+        call %GITHUB_WORKSPACE%\Tools\Build\win\build.bat Minimal . production_build
 
     - name: ⬆️ Upload the artifacts
       uses: actions/upload-artifact@v3
