--- a/.github/workflows/rust-aux02-build.yml
+++ b/.github/workflows/rust-aux02-build.yml
@@ -80,8 +80,8 @@ jobs:
       shell: bash
       run: |
         export VERSION=${{ needs.bootstrap.outputs.version }}
-        ${GITHUB_WORKSPACE}/Tools/Build/linux/build.sh DebugUnix AUX02
-        ${GITHUB_WORKSPACE}/Tools/Build/linux/build.sh MinimalUnix AUX02
+        ${GITHUB_WORKSPACE}/Tools/Build/linux/build.sh DebugUnix AUX02 "rustbeta_aux02"
+        ${GITHUB_WORKSPACE}/Tools/Build/linux/build.sh MinimalUnix AUX02 "rustbeta_aux02"
         
     - name: ⬆️ Upload the artifacts
       uses: actions/upload-artifact@v3
@@ -125,8 +125,8 @@ jobs:
       shell: cmd
       run: |
         set VERSION=${{ needs.bootstrap.outputs.version }}
-        call %GITHUB_WORKSPACE%\Tools\Build\win\build.bat Debug AUX02
-        call %GITHUB_WORKSPACE%\Tools\Build\win\build.bat Minimal AUX02
+        call %GITHUB_WORKSPACE%\Tools\Build\win\build.bat Debug AUX02 rustbeta_aux02
+        call %GITHUB_WORKSPACE%\Tools\Build\win\build.bat Minimal AUX02 rustbeta_aux02
 
     - name: ⬆️ Upload the artifacts
       uses: actions/upload-artifact@v3
