--- a/Carbon.Core/.msbuild/Tasks.targets
+++ b/Carbon.Core/.msbuild/Tasks.targets
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-	<!-- 
+	<!--
 		Deep cleaning task
 	-->
 	<Target Name="CarbonCustomClean" AfterTargets="Clean">
@@ -43,7 +43,7 @@
 		<Copy SourceFiles="$(OutputPath)$(TargetName).dll" DestinationFiles="$(OutputPath)$(Product).dll" />
 	</Target>
 
-	<!-- 
+	<!--
 		Clean any rust managed files from the output folder
 	-->
 	<Target Name="CleanupRustManaged" AfterTargets="PostBuildEvent">
@@ -55,7 +55,7 @@
 		<Delete Files="$(OutputPath)%(RustManaged.Filename).dll" />
 	</Target>
 
-	<!-- 
+	<!--
 		Creates all the sub folders on the release folder
 	-->
 	<Target Name="PrepareRelease" AfterTargets="PostBuildEvent">
@@ -65,6 +65,7 @@
 
 			<c_tools>$(CarbonBaseDir)\carbon\tools</c_tools>
 			<c_ext>$(CarbonBaseDir)\carbon\extensions</c_ext>
+			<c_harmony>$(CarbonBaseDir)\carbon\harmony</c_harmony>
 
 			<c_managed>$(CarbonBaseDir)\carbon\managed</c_managed>
 			<c_hooks>$(CarbonBaseDir)\carbon\managed\hooks</c_hooks>
@@ -79,7 +80,7 @@
 
 		<Message Text="[$(AssemblyName)] Create the release folders at '$(CarbonBaseDir)'" Importance="high" />
 		<MakeDir Directories="$(CarbonBaseDir)" />
-		<MakeDir Directories="$(c_tools);$(c_ext)" />
+		<MakeDir Directories="$(c_tools);$(c_ext);$(c_harmony)" />
 		<MakeDir Directories="$(c_managed);$(c_hooks);$(c_lib);$(c_modules)" />
 		<MakeDir Directories="$(c_plugins);$(c_data);$(c_cfg)" />
 	</Target>
