--- a/.github/workflows/rust-staging-build.yml
+++ b/.github/workflows/rust-staging-build.yml
@@ -32,7 +32,8 @@ jobs:
         uses: actions/checkout@v3
         with:
           ref: rust_beta/staging
-
+          token: ${{ secrets.GITHUB_TOKEN }}
+          
       - name: 📅 Prepare the environment
         id: step1
         run: |
