--- a/.github/workflows/rust-staging-build.yml
+++ b/.github/workflows/rust-staging-build.yml
@@ -32,7 +32,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           ref: rust_beta/staging
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.PAT_PUBLIC_REPO }}
           
       - name: 📅 Prepare the environment
         id: step1
@@ -61,7 +61,7 @@ jobs:
       uses: actions/checkout@v3
       with:
         ref: rust_beta/staging
-        token: ${{ secrets.GITHUB_TOKEN }}
+        token: ${{ secrets.PAT_PUBLIC_REPO }}
 
     - name: 🛤️ Setup the dotnet build environment
       uses: actions/setup-dotnet@v2
@@ -107,7 +107,7 @@ jobs:
       uses: actions/checkout@v3
       with:
         ref: rust_beta/staging
-        token: ${{ secrets.GITHUB_TOKEN }}
+        token: ${{ secrets.PAT_PUBLIC_REPO }}
 
     - name: 🛤️ Setup the dotnet build environment
       uses: actions/setup-dotnet@v2
