--- a/.github/workflows/rust-staging-build.yml
+++ b/.github/workflows/rust-staging-build.yml
@@ -61,7 +61,7 @@ jobs:
       uses: actions/checkout@v3
       with:
         ref: rust_beta/staging
-        token: ${{ secrets.GITHUB_TOKEN }}
+        token: ${{ secrets.PAT_ALL_REPO }}
         submodules: recursive
 
     - name: 🛤️ Setup the dotnet build environment
@@ -108,7 +108,7 @@ jobs:
       uses: actions/checkout@v3
       with:
         ref: rust_beta/staging
-        token: ${{ secrets.GITHUB_TOKEN }}
+        token: ${{ secrets.PAT_ALL_REPO }}
         submodules: recursive
 
     - name: 🛤️ Setup the dotnet build environment
