--- a/.github/workflows/preview-build.yml
+++ b/.github/workflows/preview-build.yml
@@ -62,6 +62,8 @@ jobs:
       uses: actions/checkout@v3
       with:
         ref: preview
+        token: ${{ secrets.PAT_ALL_REPO }}
+        submodules: recursive
         
     - name: 🛤️ Setup the dotnet build environment
       uses: actions/setup-dotnet@v2
@@ -108,6 +110,8 @@ jobs:
       uses: actions/checkout@v3
       with:
         ref: preview
+        token: ${{ secrets.PAT_ALL_REPO }}
+        submodules: recursive
         
     - name: 🛤️ Setup the dotnet build environment
       uses: actions/setup-dotnet@v2
