--- a/.github/workflows/production-build.yml
+++ b/.github/workflows/production-build.yml
@@ -61,6 +61,8 @@ jobs:
       uses: actions/checkout@v3
       with:
         ref: production
+        token: ${{ secrets.PAT_ALL_REPO }}
+        submodules: recursive
 
     - name: 🛤️ Setup the dotnet build environment
       uses: actions/setup-dotnet@v2
@@ -101,6 +103,8 @@ jobs:
       uses: actions/checkout@v3
       with:
         ref: production
+        token: ${{ secrets.PAT_ALL_REPO }}
+        submodules: recursive
 
     - name: 🛤️ Setup the dotnet build environment
       uses: actions/setup-dotnet@v2
