--- a/.github/workflows/rust-aux02-build.yml
+++ b/.github/workflows/rust-aux02-build.yml
@@ -60,6 +60,8 @@ jobs:
       uses: actions/checkout@v3
       with:
         ref: rust_beta/aux02
+        token: ${{ secrets.PAT_ALL_REPO }}
+        submodules: recursive
 
     - name: 🛤️ Setup the dotnet build environment
       uses: actions/setup-dotnet@v2
@@ -105,6 +107,8 @@ jobs:
       uses: actions/checkout@v3
       with:
         ref: rust_beta/aux02
+        token: ${{ secrets.PAT_ALL_REPO }}
+        submodules: recursive
 
     - name: 🛤️ Setup the dotnet build environment
       uses: actions/setup-dotnet@v2
