--- a/.github/workflows/client-build.yml
+++ b/.github/workflows/client-build.yml
@@ -59,10 +59,8 @@ jobs:
       shell: cmd
       run: |
         set VERSION=${{ needs.bootstrap.outputs.version }}
-        set here=%cd%
-        %GITHUB_WORKSPACE%\Tools\Build\win\build_client_debug.bat Debug
-        cd %here%
-        %GITHUB_WORKSPACE%\Tools\Build\win\build_client_debug.bat Release
+        call %GITHUB_WORKSPACE%\Tools\Build\win\build_client_debug.bat Debug
+        call %GITHUB_WORKSPACE%\Tools\Build\win\build_client_debug.bat Release
 
     - name: ⬆️ Upload the artifacts
       uses: actions/upload-artifact@v3
