Directly reference `0Harmony` 2.3 since NuGet is breaking things

--- a/Carbon.Core/.msbuild/References.props
+++ b/Carbon.Core/.msbuild/References.props
@@ -13,6 +13,9 @@
 		<Reference Include="System.Xml" />
 		<Reference Include="System" />
 
+		<!-- Temporarily until the NuGets get fixed -->
+		<Reference Include="$(SolutionDir)..\Tools\Helpers\0Harmony.dll" Private="false" />
+
 		<!-- Carbon API -->
 		<ProjectReference Include="$(SolutionDir)\Carbon.Components\Carbon.SDK\Carbon.SDK.csproj" Private="false" Condition="!$(Product.Contains('Carbon.SDK')) and !$(Product.Contains('Carbon.Compiler'))" />
 
