--- a/Carbon.Core/.msbuild/References.props
+++ b/Carbon.Core/.msbuild/References.props
@@ -12,9 +12,11 @@
 		<Reference Include="System.Xml.Serialization" />
 		<Reference Include="System.Xml" />
 		<Reference Include="System" />
-
-		<!-- Temporarily until the NuGets get fixed -->
-		<Reference Include="$(SolutionDir)..\Tools\Helpers\0Harmony.dll" Private="false" />
+		
+		<PackageReference Include="Lib.Harmony.Thin" Version="2.3.0.1" IncludeAssets="none" GeneratePathProperty="true" />
+		<Reference Include="Lib.Harmony.Thin">
+			<HintPath>$(PkgLib_Harmony_Thin)\lib\net48\0Harmony.dll</HintPath>
+		</Reference>
 
 		<!-- Carbon API -->
 		<ProjectReference Include="$(SolutionDir)\Carbon.Components\Carbon.SDK\Carbon.SDK.csproj" Private="false" Condition="!$(Product.Contains('Carbon.SDK')) and !$(Product.Contains('Carbon.Compiler'))" />
