--- a/Carbon.Core/.msbuild/Configurations.props
+++ b/Carbon.Core/.msbuild/Configurations.props
@@ -25,6 +25,7 @@
 				<WarningsNotAsErrors>CS1685</WarningsNotAsErrors>
 				<NoWarn>CS1685</NoWarn>
 				<NoWarn>CS7035</NoWarn>
+				<NoWarn>CS1522</NoWarn>
 
 				<!-- -->
 				<ConfigurationNormalized>Release</ConfigurationNormalized>
