--- a/Carbon.Core/.msbuild/Configurations.props
+++ b/Carbon.Core/.msbuild/Configurations.props
@@ -43,6 +43,7 @@
 				<WarningsNotAsErrors>CS1685</WarningsNotAsErrors>
 				<NoWarn>CS1685</NoWarn>
 				<NoWarn>CS7035</NoWarn>
+				<NoWarn>CS1522</NoWarn>
 
 				<!-- -->
 				<ConfigurationNormalized>Minimal</ConfigurationNormalized>
@@ -60,6 +61,7 @@
 				<!-- We want to override corelib to have the new lang features -->
 				<NoWarn>CS1685</NoWarn>
 				<NoWarn>CS7035</NoWarn>
+				<NoWarn>CS1522</NoWarn>
 
 				<!-- -->
 				<ConfigurationNormalized>Debug</ConfigurationNormalized>
