--- a/Carbon.Core/.msbuild/Configurations.props
+++ b/Carbon.Core/.msbuild/Configurations.props
@@ -22,10 +22,8 @@
 				<TreatWarningsAsErrors>true</TreatWarningsAsErrors>
 
 				<!-- We want to override corelib to have the new lang features -->
-				<WarningsNotAsErrors>CS1685</WarningsNotAsErrors>
-				<NoWarn>CS1685</NoWarn>
-				<NoWarn>CS7035</NoWarn>
-				<NoWarn>CS1522</NoWarn>
+				<WarningsNotAsErrorsWarningsNotAsErrors>CS1685</WarningsNotAsErrorsWarningsNotAsErrors>
+				<NoWarn>CS1685;CS7035;CS1522</NoWarn>
 
 				<!-- -->
 				<ConfigurationNormalized>Release</ConfigurationNormalized>
@@ -41,9 +39,7 @@
 
 				<!-- We want to override corelib to have the new lang features -->
 				<WarningsNotAsErrors>CS1685</WarningsNotAsErrors>
-				<NoWarn>CS1685</NoWarn>
-				<NoWarn>CS7035</NoWarn>
-				<NoWarn>CS1522</NoWarn>
+				<NoWarn>CS1685;CS7035;CS1522</NoWarn>
 
 				<!-- -->
 				<ConfigurationNormalized>Minimal</ConfigurationNormalized>
@@ -59,9 +55,7 @@
 				<TreatWarningsAsErrors>false</TreatWarningsAsErrors>
 
 				<!-- We want to override corelib to have the new lang features -->
-				<NoWarn>CS1685</NoWarn>
-				<NoWarn>CS7035</NoWarn>
-				<NoWarn>CS1522</NoWarn>
+				<NoWarn>CS1685;CS7035;CS1522</NoWarn>
 
 				<!-- -->
 				<ConfigurationNormalized>Debug</ConfigurationNormalized>
