--- a/Carbon.Core/.msbuild/Configurations.props
+++ b/Carbon.Core/.msbuild/Configurations.props
@@ -23,7 +23,7 @@
 
 				<!-- We want to override corelib to have the new lang features -->
 				<WarningsNotAsErrorsWarningsNotAsErrors>CS1685</WarningsNotAsErrorsWarningsNotAsErrors>
-				<NoWarn>CS1685;CS7035;CS1522;CS0660</NoWarn>
+				<NoWarn>CS1685;CS7035;CS1522</NoWarn>
 
 				<!-- -->
 				<ConfigurationNormalized>Release</ConfigurationNormalized>
@@ -39,7 +39,7 @@
 
 				<!-- We want to override corelib to have the new lang features -->
 				<WarningsNotAsErrors>CS1685</WarningsNotAsErrors>
-				<NoWarn>CS1685;CS7035;CS1522;CS0660</NoWarn>
+				<NoWarn>CS1685;CS7035;CS1522</NoWarn>
 
 				<!-- -->
 				<ConfigurationNormalized>Minimal</ConfigurationNormalized>
@@ -55,7 +55,7 @@
 				<TreatWarningsAsErrors>false</TreatWarningsAsErrors>
 
 				<!-- We want to override corelib to have the new lang features -->
-				<NoWarn>CS1685;CS7035;CS1522;CS0660</NoWarn>
+				<NoWarn>CS1685;CS7035;CS1522</NoWarn>
 
 				<!-- -->
 				<ConfigurationNormalized>Debug</ConfigurationNormalized>
