Added Carbon.Native baseline

--- a/.gitmodules
+++ b/.gitmodules
@@ -42,6 +42,10 @@
 	path = Carbon.Core/Carbon.Hooks/Carbon.Hooks.Community
 	url = https://github.com/CarbonCommunity/Carbon.Hooks.Community.git
 	branch = .
+[submodule "Carbon.Core/Carbon.Native"]
+	path = Carbon.Core/Carbon.Native
+	url = https://github.com/CarbonCommunity/Carbon.Native.git
+	branch = .
 [submodule "Carbon.Core/Carbon.Components/Carbon.Client"]
 	path = Carbon.Core/Carbon.Components/Carbon.Client
 	url = https://github.com/CarbonCommunity/Carbon.Client.git
