--- a/.github/workflows/edge-build.yml
+++ b/.github/workflows/edge-build.yml
@@ -110,6 +110,10 @@ jobs:
       with:
         dotnet-version: 7.0.x
 
+    - uses: actions-rs/cargo@v1
+      with:
+        command: check
+        
     - name: 🔨 Setup the Carbon build environment
       shell: cmd
       run: |
