--- a/.github/workflows/edge-build.yml
+++ b/.github/workflows/edge-build.yml
@@ -105,7 +105,14 @@ jobs:
       uses: actions/setup-dotnet@v2
       with:
         dotnet-version: 7.0.x
-
+        
+    - uses: dtolnay/rust-toolchain@stable
+    - uses: ClementTsang/cargo-action@v0.0.3
+      with:
+        command: build
+        args: --lib --bins --benches
+        directory: Carbon.Core/Carbon.Native
+        
     - name: 🔨 Setup the Carbon build environment
       shell: cmd
       run: |
