--- a/.github/workflows/edge-build.yml
+++ b/.github/workflows/edge-build.yml
@@ -109,7 +109,7 @@ jobs:
     - uses: dtolnay/rust-toolchain@stable
     - uses: ClementTsang/cargo-action@v0.0.3
       with:
-        command: build
+        command: build -r
         args: --lib --bins --benches
         directory: Carbon.Core/Carbon.Native
         
@@ -122,7 +122,6 @@ jobs:
       shell: cmd
       run: |
         set VERSION=${{ needs.bootstrap.outputs.version }}
-        call %GITHUB_WORKSPACE%\Tools\Build\win\build_native.bat
         call %GITHUB_WORKSPACE%\Tools\Build\win\build.bat Debug . edge_build
         call %GITHUB_WORKSPACE%\Tools\Build\win\build.bat Minimal . edge_build
 
