--- a/.github/workflows/edge-build.yml
+++ b/.github/workflows/edge-build.yml
@@ -65,6 +65,13 @@ jobs:
       with:
         dotnet-version: 7.0.x
 
+    - uses: dtolnay/rust-toolchain@stable
+    - uses: ClementTsang/cargo-action@v0.0.3
+      with:
+        command: build -r
+        args: --lib --bins --benches
+        directory: Carbon.Core/Carbon.Native
+        
     - name: 🔨 Setup the Carbon build environment
       shell: bash
       run: |
