--- a/.github/workflows/preview-build.yml
+++ b/.github/workflows/preview-build.yml
@@ -1,5 +1,5 @@
 ###
-### Copyright (c) 2023 Carbon Community 
+### Copyright (c) 2024 Carbon Community 
 ### All rights reserved
 ###
 name: Preview Build
@@ -70,6 +70,13 @@ jobs:
       with:
         dotnet-version: 7.0.x
 
+    - uses: dtolnay/rust-toolchain@stable
+    - uses: ClementTsang/cargo-action@v0.0.3
+      with:
+        command: build -r
+        args: --lib --bins --benches
+        directory: Carbon.Core/Carbon.Native
+        
     - name: 🔨 Setup the Carbon build environment
       shell: bash
       run: |
@@ -118,6 +125,13 @@ jobs:
       with:
         dotnet-version: 7.0.x
 
+    - uses: dtolnay/rust-toolchain@stable
+    - uses: ClementTsang/cargo-action@v0.0.3
+      with:
+        command: build -r
+        args: --lib --bins --benches
+        directory: Carbon.Core/Carbon.Native
+        
     - name: 🔨 Setup the Carbon build environment
       shell: cmd
       run: |
