--- a/.github/workflows/preview-build.yml
+++ b/.github/workflows/preview-build.yml
@@ -74,7 +74,7 @@ jobs:
     - uses: ClementTsang/cargo-action@v0.0.3
       with:
         command: build
-        args: -r
+        args: -r --target x86_64-unknown-linux-gnu
         directory: Carbon.Core/Carbon.Native
         
     - name: 🔨 Setup the Carbon build environment
@@ -129,7 +129,7 @@ jobs:
     - uses: ClementTsang/cargo-action@v0.0.3
       with:
         command: build
-        args: -r
+        args: -r --target x86_64-pc-windows-msvc
         directory: Carbon.Core/Carbon.Native
         
     - name: 🔨 Setup the Carbon build environment
