--- a/.github/workflows/rust-release-build.yml
+++ b/.github/workflows/rust-release-build.yml
@@ -68,8 +68,8 @@ jobs:
     - uses: dtolnay/rust-toolchain@stable
     - uses: ClementTsang/cargo-action@v0.0.3
       with:
-        command: build -r
-        args: --lib --bins --benches
+        command: build
+        args: -r --target x86_64-unknown-linux-gnu
         directory: Carbon.Core/Carbon.Native
         
     - name: 🔨 Setup the Carbon build environment
@@ -121,8 +121,8 @@ jobs:
     - uses: dtolnay/rust-toolchain@stable
     - uses: ClementTsang/cargo-action@v0.0.3
       with:
-        command: build -r
-        args: --lib --bins --benches
+        command: build
+        args: -r --target x86_64-pc-windows-msvc
         directory: Carbon.Core/Carbon.Native
         
     - name: 🔨 Setup the Carbon build environment
