--- a/Carbon.Core/.msbuild/References.props
+++ b/Carbon.Core/.msbuild/References.props
@@ -20,6 +20,7 @@
 
 		<!-- Roslyn -->
 		<PackageReference Include="Roslynator.CSharp" Version="4.9.0" />
+		<PackageReference Include="ICSharpCode.Decompiler" Version="8.2.0.7535" />
 		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.9.0-3.final" />
 		<PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.9.0-3.final" />
 
