--- a/.github/workflows/edge-build.yml
+++ b/.github/workflows/edge-build.yml
@@ -46,7 +46,7 @@ jobs:
   build-linux:
     name: 🐧 Linux
     needs: bootstrap
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     continue-on-error: false
 
     outputs:
