--- a/.github/workflows/rust-release-build.yml
+++ b/.github/workflows/rust-release-build.yml
@@ -45,7 +45,7 @@ jobs:
   build-linux:
     name: 🐧 Linux
     needs: bootstrap
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     continue-on-error: true
 
     outputs:
